@@ -1,3 +1,14 @@
+** Improved gsl_sf_zeta_e to return exactly zero for negative even
+integers, avoiding less accurate trigonometric reduction.
+
+** Fixed a bug in gsl_sf_zetam1_int_e where 0 was returned instead of
+-1 for negative even integer arguments.
+
+** When the differential equation solver gsl_odeiv_apply encounters a
+singularity it returns the step-size which caused the error code from
+the user-defined function, as opposed to leaving the step-size
+unchanged.
+
 ** Added Mathieu functions
 
 * What was new in gsl-1.8:
